# xdg-screensaver-shim

./: README.md  meson.build  xdg-screensaver-shim.c
